@@ -1,5 +1,9 @@
 2003-05-14  Seth Robertson  <seth@startide.sysdetect.com>
 
+	* lib/b_general.c: Minor nits never having tested code...
+
+	* lib/b_thread.c: Allow bk_exit from a thread to work correctly
+
 	* lib/b_run.c: Implement thread creation for event queues and fds.
 
 	* lib/b_pollio.c (polling_io_ioh_handler): Fix sanity dealing with user close, IOH close, etc
